[gd_scene load_steps=4 format=2]

[ext_resource path="res://PullGame.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/fixed/charm.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/fixed/error.wav" type="AudioStream" id=3]

[node name="PullGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Team1" type="Node2D" parent="."]

[node name="Team2" type="Node2D" parent="."]

[node name="Cards" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="AudioWord" type="AudioStreamPlayer" parent="."]

[node name="AudioError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioCharm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Bar1" type="Line2D" parent="."]
points = PoolVector2Array( 200, 0, 200, 670 )

[node name="Bar2" type="Line2D" parent="."]
points = PoolVector2Array( 824, 0, 824, 670 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
